Bug 1544228 - Fix some about: pages text color contrast for GTK dark system themes.
Some about: pages use -moz-Dialog background color which is dark with popular GTK dark themes (Adwaita-dark, Yaru-dark) so the text color needs to be set to -moz-DialogText to retain contrast. 
This affects about:buildconfig, about:cache, about:serviceworkers and about:credits.

--- a/toolkit/themes/shared/about.css
+++ b/toolkit/themes/shared/about.css
@@ -4,6 +4,7 @@
 
 html {
   background: -moz-Dialog;
+  color: -moz-DialogText;
   line-height: 1.6em;
   padding: 0 1em;
   font: message-box;
